# hyprland-vim-kbswitch

./: Cargo.toml  flake.nix
src/: lib.rs
