[package]
name = "libswaykbswitch"
authors = ["Andrey Khorokhorin <a-horohorin@mail.ru>"]
version = "0.2.1"
description = "A shared library for Vim keyboard layout switching via sway IPC"
license = "MIT"
repository = "https://github.com/khaser/sway-vim-kbswitch"
keywords = ["sway", "swaywm", "vim"]
readme = "README.md"

[dependencies]
getopts = "0.2.24"
hyprland = "0.3.13"
phf = { version = "0.13.1", features = ["macros"] }

[lib]
name = "hyprlandkbswitch"
crate-type = ["cdylib"]

[[bin]]
name = "switcher"
path = "./src/lib.rs"

